# ashybulakstroy-mcp-1c-bridge

./: .env.example  .gitignore  FULL_FILE_MANIFEST.md  FULL_FILE_MANIFEST_REBUILT_FROM_216KB.md  GITHUB_PUSH.md  LICENSE  MERGE_MAP.md  README.md  TOOL_WIRING_AUDIT.md  pyproject.toml  requirements.txt
.codex/: config.toml
.cursor/: mcp.json
.github/workflows/: tests.yml
config/: claude_desktop_config.example.json
docs/: AGENT_DEVELOPMENT.md  AI_NORMALIZATION.md  ARCHITECTURE_COMPLETE.md  BUSINESS_MODULES.md  MCP_RESOURCES_PROMPTS_HTTP.md  ONEC_HTTP_SERVICE_CONTRACT.md  UNIFIED_CONNECTION.md  architecture.md  overview.md  testing.md  use-cases.md
docs/rules/: 1c_anti_patterns.md  1c_mcp_workflow.md  1c_performance.md
prompts/: buh_analyst.md  buh_reviewer.md  buh_tester.md
scripts/: run_mcp.ps1  run_mcp.sh
src/ashybulakstroy_mcp_1c_bridge/: business_documents.py  business_money.py  business_warehouse.py  config.py  core_server.py  init_project.py  knowledge.py  odata.py  validation.py
src/ashybulakstroy_mcp_1c_bridge/buh/: __init__.py  client.py  inspect.py  odata.py  rpc.py
src/ashybulakstroy_mcp_1c_bridge/capabilities/: __init__.py  registry.py
src/ashybulakstroy_mcp_1c_bridge/mcp/: prompts.py  resources.py  server.py
src/ashybulakstroy_mcp_1c_bridge/normalization/: __init__.py  legacy_sales_invoice.py  service.py
src/ashybulakstroy_mcp_1c_bridge/templates/: payment.json  sales_invoice.json
tests/: test_odata_inventory.py  test_validation.py
tests/fixtures/: fake_odata_metadata.xml
(+6 files in other folders)
